# echoplayer-backend

./: .gitignore  CLAUDE.md  conductor.json  pyproject.toml  run.py
assets/: session-debug.html
src/app/: enum.py  main.py  settings.py
src/app/api/: deps.py  router.py
src/app/api/v1/: __init__.py  audio.py  health.py  jit.py  preload.py  session.py
src/app/config/: __init__.py  manager.py  schemas.py
src/app/models/: audio_track.py  session.py  window.py
src/app/schemas/: __init__.py  common.py  jit_request.py  session_request.py
src/app/services/: audio_preprocessor.py  cache_manager.py  jit_transcoder.py  preload_strategy.py  profile_builder.py  session_factory.py  session_manager.py  session_playlist_generator.py
src/app/utils/: __init__.py  hash.py  log_config.py
